force-app/main/default/objects/Service_GL_Code_Restriction__mdt/Service_GL_Code_Restriction__mdt.object-meta.xml
<CustomObject>
    <description>Indicates an allowlist/blocklist of Services for specified GL Codes

Specifying Excluded GL Codes will prevent that GL Code being generated for a Service Category, even if it is included.
Specifying Included GL Codes will ONLY create records for any included GL Codes for that Service Category.

Excluded = remove cell from service
Included = only show specified GL Codes for service (eg Centrally Held for QFR)</description>
    <label>Service GL Code Restriction</label>
    <pluralLabel>Service GL Code Restrictions</pluralLabel>
</CustomObject>