force-app/main/default/objects/Service_GL_Code_Restriction__mdt/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <label>GL Code</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>