force-app/main/default/objects/Service_GL_Code_Restriction__mdt/fields/Restriction_Type__c.field-meta.xml
<CustomField>
    <fullName>Restriction_Type__c</fullName>
    <label>Restriction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exclude</fullName>
                <default>true</default>
                <label>Exclude</label>
            </value>
            <value>
                <fullName>Include</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>