force-app/main/default/objects/Service_GL_Code_Restriction__mdt/fields/Summary_Only__c.field-meta.xml
<CustomField>
    <fullName>Summary_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether the GL Code specified should be created in the row-level total column only.</description>
    <label>Summary Only</label>
    <type>Checkbox</type>
</CustomField>